syntax = "proto3";

package sonr.wallet;
import "proto/wallet/crypto.proto";
option go_package = "github.com/sonr-io/core/internal/wallet";

// KeychainType is the type of keychain.
enum KeychainType {
    SONR = 0;
    ETH = 1;
    BTC = 2;
    SOL = 3;
}

// KeyPair represents a public/private key pair.
message KeyPair {
    string label = 1;
    PrivateKey privateKey = 2;
    PublicKey publicKey = 3;
}

// Keychain is a collection of KeyPair objects.
message Keychain {
    KeychainType type = 1; // Type of keychain
    string path = 2; // path to keychain
    string address = 3; // address is: Libp2p Address, Ethereum Address, Bitcoin Address, or Solana Address
    map<string, KeyPair> keys = 4; // keys is: map<string, KeyPair>
}
